--- a/03.css
+++ b/03.css
@@ -9,5 +9,25 @@ body{
     background-color: #6592CF;
     
 }
-    
+
+.circulo{
+    background: #EEB850;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    top: 220px;
+    left: 555px;
+    z-index: 1;
+}
+
+.circuloM{
+    border-radius: 50%;
+    width: 300px;
+    height: 300px;
+    position: absolute;
+    top: 220px;
+    left: 555px;
+    background-color: #243D83;
+}
     
